gcc/testsuite/g++.dg/pph/d2null.h
// { dg-error "header lacks guard for PPH" "" { xfail *-*-* } }
